--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
     "git.ignoreLimitWarning": true,
     "files.associations": {
+        "*.cpp": "cpp",
+        "*.html": "html",
+        "*.jsx": "javascript",
         "iostream": "cpp",
         "algorithm": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "vector": "cpp"
     },
     "python.pythonPath": "C:\\Program Files\\Python39\\python.exe",
     "C_Cpp.errorSquiggles": "Disabled",
