--- a/myfolder/GRAPH/.vscode/settings.json
+++ b/myfolder/GRAPH/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "xstring": "cpp",
+        "vector": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
