--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,26 +4,63 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-{
-    "name": "(gdb) Bash on Windows Attach",
-    "type": "cppdbg",
-    "request": "attach",
-    "program": "enter program name, for example ${workspaceFolder}/a.exe",
-    "processId": "${command:pickRemoteProcess}",
-    "pipeTransport": {
-        "debuggerPath": "/usr/bin/gdb",
-        "pipeProgram": "${env:windir}\\system32\\bash.exe",
-        "pipeArgs": ["-c"],
-        "pipeCwd": ""
-    },
-    "setupCommands": [
         {
-            "description": "Enable pretty-printing for gdb",
-            "text": "-enable-pretty-printing",
-            "ignoreFailures": true
-        }
-    ]
-},
+            "type": "java",
+            "name": "Launch PeakMountain",
+            "request": "launch",
+            "mainClass": "PeakMountain",
+            "projectName": "final450_f5578a12"
+        },
+        {
+            "type": "java",
+            "name": "Launch Ceil",
+            "request": "launch",
+            "mainClass": "Ceil",
+            "projectName": "final450_f5578a12"
+        },
+        {
+            "type": "java",
+            "name": "Launch BinarySearch",
+            "request": "launch",
+            "mainClass": "BinarySearch",
+            "projectName": "final450_f5578a12"
+        },
+        {
+            "type": "java",
+            "name": "Launch Swap2",
+            "request": "launch",
+            "mainClass": "myfolder.Codechef.Swap2",
+            "projectName": "final450_f5578a12"
+        },
+        {
+            "type": "java",
+            "name": "Launch NewArrays",
+            "request": "launch",
+            "mainClass": "NewArrays",
+            "projectName": "final450_f5578a12"
+        },
+        {
+            "name": "(gdb) Bash on Windows Attach",
+            "type": "cppdbg",
+            "request": "attach",
+            "program": "enter program name, for example ${workspaceFolder}/a.exe",
+            "processId": "${command:pickRemoteProcess}",
+            "pipeTransport": {
+                "debuggerPath": "/usr/bin/gdb",
+                "pipeProgram": "${env:windir}\\system32\\bash.exe",
+                "pipeArgs": [
+                    "-c"
+                ],
+                "pipeCwd": ""
+            },
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
         {
             "name": "g++.exe - Build and debug active file",
             "type": "cppdbg",
